Fixed contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,14 @@ html {
 body {
   margin:0;
   font-family: Arial, Helvetica, sans-serif;
-  color: #2e4756;
+  color: #243642;
   background:linear-gradient(1deg, #c5c4e9, rgba(255, 255, 255, 0));
   min-height: 100vh;
   height: 100%;
 }
 
 a {
-  color:#336bb4;
+  color:#264F87;
   text-decoration: none;
 }
 
@@ -55,14 +55,14 @@ a:hover {
   list-style: none;
 }
 
-.navigation > a > h1 {
+.navigation > h1 {
   font-size: 1.4rem;
 }
 
 /* Highlight selected navigation option */
 .highlight {
   padding:10px;
-  border-bottom: 2px solid #2e4756;
+  border-bottom: 2px solid #243642;
 }
 
 .mobile-navigation-active {
@@ -159,7 +159,7 @@ a:hover {
 .resume {
   margin-left: 0%;
   margin-top: 10%;
-  background-color: #2196F3;
+  background-color: #085696;
   color: #fff;
 }
 
@@ -217,7 +217,6 @@ blockquote {
 .content-container > section > .content-hobbies {
   width: 75%;
   font-size: 1.25rem;
-  text-align: justify;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
   padding: 80px;
@@ -414,7 +413,7 @@ table > caption {
   text-align: left;
   margin-bottom: 1rem;
   font-size: 1.5rem;
-  color: #2e4756;
+  color: #243642;
   font-weight: bold;
 }
 
@@ -542,7 +541,7 @@ tr:nth-child(even) {
 .projectSubtitle {
   margin-top: 10px;
   font-style: italic;
-  color: #9c9c9c;
+  color: #4D4D4D;
 }
 
 .projectImage {
